<resources>
    <string name="app_name">Faux Workshop</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">loading...</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="company">Company :</string>
    <string name="duration">Duration :</string>
    <string name="location">Location :</string>
    <string name="fee">Fee :</string>
    <string name="rupee_symbol">₹</string>
    <string name="apply">APPLY</string>
    <string name="successfully_applied">Successfully Applied!</string>
    <string name="empty_applied_list">Let\'s start by applying to some workshops!</string>
    <string name="empty_available_list">Uh-Oh... No more workshops available!</string>

</resources>
