<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/log_in"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_color"
        android:ems="10"
        android:fontFamily="@font/nunito_semibold"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/med_grey"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_field"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_color"
        android:ems="10"
        android:fontFamily="@font/nunito_semibold"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:hint="@string/enter_password"
        android:textColorHint="@color/med_grey"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_color"
        android:fontFamily="@font/nunito_bold"
        android:textColor="#fff"
        android:textSize="15sp"
        android:text="@string/log_in"
        android:textAllCaps="false"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_btn">

        <TextView
            android:id="@+id/existing_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/existing_account_text"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/sign_up" />
    </RelativeLayout>

</RelativeLayout>